# Animart.AI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
analyses/: 20260627_184910.json  20260627_190955.json  20260627_191040.json  20260627_193152.json
analyses/fun/: 954a40212a3520c4.json  a0838374d1202000.json  d2014924654239c1.json  d4540b486a426028.json
analyses/fun/immersive/: a0838374d1202000.captions.json  d2014924654239c1.captions.json
analyses/serious/: 86c0e824402000d8.json
analyses/serious/immersive/: 86c0e824402000d8.captions.json
backend/: analyzer.py  dedup.py  immersive.py  main.py  matcher.py  narrator.py  profile.py  server.py  storage.py  supa.py
docs/: app.md  long_term_memory.md  narration_prompt.md  prompt.md  short_term_memory.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Auth.tsx  Landing.tsx  Onboarding.tsx  PageBiblio.tsx  PageI.tsx  PageII.tsx  api.ts  cityData.ts  data.ts  types.ts
immersive_scene/: README.md  audio.py  claude_client.py  elevenlabs_client.py  pipeline.py  prompts.py  sync_voices.py  voice_catalog.json  voices.py
scripts/: import_cache.py
supabase/migrations/: 0001_init.sql
